typescript/checker/tests/conformance/parser/ecmascript5/parserS7.3_A1.1_T2.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            735,
        ),
        hi: BytePos(
            741,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/parser/ecmascript5/parserS7.3_A1.1_T2.ts:17:3
   |
17 |   $ERROR('#1: var\\nx\\n=\\n1\\n; x === 1. Actual: ' + (x));
   |   ^^^^^^

